# code-merger-tauri

./: .eslintrc.cjs  .gitignore  README.md  components.d.ts  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/scripts/: check-version.py  modify-version.py
.github/workflows/: build.yml  commit-build.yml  pr-build.yml  release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: data_response.rs  main.rs  my_file.rs
src-tauri/src/request/: are_files_less_than_request.rs  merge_files_request.rs  mod.rs
src-tauri/src/requests/: get_sub_files_request.rs  merge_files_reqeust.rs  mod.rs
src/assets/: main.css
src/compoments/: dark-toggle.vue  exclude-extension.vue  exclude-path.vue  input-merge-path.vue  route-toggle.vue  select-files.vue  shortcut-keys.vue  theme-toggle.vue
src/interface/: are-files-less-than-request.ts  data-response.ts  get-sub-files-request.ts  merge-files-request.ts  my-file.ts  tree-files.ts
src/router/: index.ts
src/stores/: config.ts  global.ts
src/utils/: path-utils.ts
src/views/: global-view.vue
src/views/main/: index.vue
src/views/settings/: index.vue
src/views/test/: index.vue
