[package]
name = "code-merger-tauri"
version = "0.0.0"
description = "code-merger-tauri"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.2", features = [
  "devtools",
  "macos-private-api",
] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-os = "2.0.1"
tauri-plugin-store = "2.0.1"
tauri-plugin-process = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
walkdir = "2.5.0"
window-vibrancy = "0.5.2"
tiktoken-rs = "0.5.9"
